# Meeting-Agent

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
.specify/memory/: constitution.md
specs/001-jira-copilot-intelligence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-jira-copilot-intelligence/checklists/: requirements.md
specs/001-jira-copilot-intelligence/contracts/: rest-api.md
specs/002-add-quickstart-option/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-quickstart-option/checklists/: requirements.md
specs/002-add-quickstart-option/contracts/: cli.md
specs/004-copilot-mcp-wrapper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-copilot-mcp-wrapper/checklists/: requirements.md
specs/004-copilot-mcp-wrapper/contracts/: mcp-tools.md
src/: config.py  logging_config.py  main.py
src/analysis/: entity_matcher.py  query_handler.py  query_tools.py  transcript_analyzer.py  update_suggester.py
src/api/: app.py
src/classification/: classifier.py  signals.py
src/copilot_mcp/: __main__.py  auth.py  config.py  graph_client.py  server.py
src/ingestion/: copilot_client.py  jira_client.py  normalizer.py
src/quickstart/: __init__.py  __main__.py  config_schema.py  connectivity.py  db_migrator.py  env_writer.py  prompts.py
src/storage/: database.py  models.py  repository.py  seed_status_mappings.py
src/velocity/: aggregator.py  calculator.py  forecaster.py
src/workers/: maintenance_worker.py  scheduler.py  sync_worker.py
(+23 files in other folders)
